--- a/inject-resources-commons/build.gradle
+++ b/inject-resources-commons/build.gradle
@@ -1,5 +1,5 @@
 dependencies {
-    compile group: 'org.jetbrains', name: 'annotations', version: '19.0.0'
+    implementation group: 'org.jetbrains', name: 'annotations', version: '19.0.0'
 
     compileOnly project(':inject-resources-core')
     compileOnly group: 'org.reflections', name: 'reflections', version: '0.10.2'
@@ -7,13 +7,13 @@ dependencies {
     compileOnly group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: JACKSON_VERSION
     compileOnly group: 'com.google.code.gson', name: 'gson', version: GSON_VERSION
 
-    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter', version: JUNIT_VERSION
-    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: JUNIT_VERSION
-    testCompile group: 'org.assertj', name: 'assertj-core', version: '3.14.0'
-    testCompile group: 'io.leangen.geantyref', name: 'geantyref', version: '1.3.11'
-    testCompile group: 'com.google.guava', name: 'guava', version: '29.0-jre'
-    testCompile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: JACKSON_VERSION
-    testCompile group: 'com.google.code.gson', name: 'gson', version: GSON_VERSION
+    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter', version: JUNIT_VERSION
+    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: JUNIT_VERSION
+    testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.14.0'
+    testImplementation group: 'io.leangen.geantyref', name: 'geantyref', version: '1.3.11'
+    testImplementation group: 'com.google.guava', name: 'guava', version: '30.0-jre'
+    testImplementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: JACKSON_VERSION
+    testImplementation group: 'com.google.code.gson', name: 'gson', version: GSON_VERSION
 
     testImplementation project(':inject-resources-core')
     testImplementation group: 'org.junit.platform', name: 'junit-platform-testkit', version: '1.6.0'
