--- a/inject-resources-core/build.gradle
+++ b/inject-resources-core/build.gradle
@@ -55,15 +55,16 @@ publishing {
 }
 
 signing {
+    required = false
     def signingKey = System.getenv('SIGNING_KEY')
     useInMemoryPgpKeys(signingKey, '')
     sign publishing.publications.mavenJava
 }
 
 dependencies {
-    compile group: 'org.jetbrains', name: 'annotations', version: '19.0.0'
+    implementation group: 'org.jetbrains', name: 'annotations', version: '19.0.0'
 
-    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: JUNIT_VERSION
+    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: JUNIT_VERSION
 
     testImplementation project(':test-commons')
     testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.14.0'
