--- a/inject-resources-junit-jupiter/build.gradle
+++ b/inject-resources-junit-jupiter/build.gradle
@@ -61,6 +61,7 @@ publishing {
 }
 
 signing {
+    required = false
     def signingKey = System.getenv('SIGNING_KEY')
     useInMemoryPgpKeys(signingKey, '')
     sign publishing.publications.mavenJava
@@ -72,8 +73,8 @@ dependencies {
     api group: 'org.apiguardian', name: 'apiguardian-api', version: '1.1.0'
     api group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: JUNIT_VERSION
 
-    compile project(':inject-resources-core')
-    compile group: 'org.jetbrains', name: 'annotations', version: '19.0.0'
+    implementation project(':inject-resources-core')
+    implementation group: 'org.jetbrains', name: 'annotations', version: '19.0.0'
 
     implementation group: 'org.reflections', name: 'reflections', version: '0.10.2'
 
@@ -83,12 +84,12 @@ dependencies {
     compileOnly group: 'com.google.code.gson', name: 'gson', version: GSON_VERSION
     compileOnly group: 'org.yaml', name: 'snakeyaml', version: SNAKE_YAML_VERSION
 
-    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter', version: JUNIT_VERSION
-    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: JUNIT_VERSION
-    testCompile group: 'org.assertj', name: 'assertj-core', version: '3.14.0'
-    testCompile group: 'org.mockito', name: 'mockito-junit-jupiter', version: '3.3.3'
-    testCompile group: 'io.leangen.geantyref', name: 'geantyref', version: '1.3.11'
-    testCompile group: 'com.google.guava', name: 'guava', version: '29.0-jre'
+    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter', version: JUNIT_VERSION
+    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: JUNIT_VERSION
+    testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.14.0'
+    testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: '3.3.3'
+    testImplementation group: 'io.leangen.geantyref', name: 'geantyref', version: '1.3.11'
+    testImplementation group: 'com.google.guava', name: 'guava', version: '30.0-jre'
 
     testImplementation project(':test-commons')
     testImplementation project(':inject-resources-core')
