--- a/inject-resources-junit-jupiter/tests-with-jackson/build.gradle
+++ b/inject-resources-junit-jupiter/tests-with-jackson/build.gradle
@@ -5,16 +5,16 @@ jacocoTestReport {
     classDirectories.from files(sourceSets.main.output)
 
     reports {
-        xml.enabled = true
-        html.enabled = true
+        xml.required = true
+        html.required = true
     }
 }
 
 dependencies {
-    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter', version: JUNIT_VERSION
-    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: JUNIT_VERSION
-    testCompile group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: JACKSON_VERSION
-    testCompile group: 'com.google.guava', name: 'guava', version: '29.0-jre'
+    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter', version: JUNIT_VERSION
+    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: JUNIT_VERSION
+    testImplementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: JACKSON_VERSION
+    testImplementation group: 'com.google.guava', name: 'guava', version: '29.0-jre'
 
     testImplementation project(':inject-resources-commons')
     testImplementation project(':inject-resources-junit-jupiter')
