--- a/inject-resources-junit-vintage/build.gradle
+++ b/inject-resources-junit-vintage/build.gradle
@@ -61,15 +61,16 @@ publishing {
 }
 
 signing {
+    required = false
     def signingKey = System.getenv('SIGNING_KEY')
     useInMemoryPgpKeys(signingKey, '')
     sign publishing.publications.mavenJava
 }
 
 dependencies {
-    compile project(':inject-resources-core')
-    compile group: 'junit', name: 'junit', version: '4.12'
-    compile group: 'org.jetbrains', name: 'annotations', version: '19.0.0'
+    implementation project(':inject-resources-core')
+    implementation group: 'junit', name: 'junit', version: '4.12'
+    implementation group: 'org.jetbrains', name: 'annotations', version: '19.0.0'
 
     compileOnly project(':inject-resources-commons')
     compileOnly group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: JACKSON_VERSION
@@ -79,11 +80,11 @@ dependencies {
 
     implementation group: 'org.reflections', name: 'reflections', version: '0.10.2'
 
-    testCompile group: 'org.assertj', name: 'assertj-core', version: '3.14.0'
-    testCompile group: 'nl.jqno.equalsverifier', name: 'equalsverifier', version: '3.4.1'
-    testCompile group: 'com.google.guava', name: 'guava', version: '29.0-jre'
-    testCompile group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: JACKSON_VERSION
-    testCompile group: 'io.leangen.geantyref', name: 'geantyref', version: '1.3.11'
+    testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.14.0'
+    testImplementation group: 'nl.jqno.equalsverifier', name: 'equalsverifier', version: '3.4.1'
+    testImplementation group: 'com.google.guava', name: 'guava', version: '29.0-jre'
+    testImplementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: JACKSON_VERSION
+    testImplementation group: 'io.leangen.geantyref', name: 'geantyref', version: '1.3.11'
 
     testImplementation project(':test-commons')
     testImplementation project(':inject-resources-core')
