--- a/inject-resources-spring/build.gradle
+++ b/inject-resources-spring/build.gradle
@@ -61,26 +61,28 @@ publishing {
 }
 
 signing {
+    required = false
     def signingKey = System.getenv('SIGNING_KEY')
     useInMemoryPgpKeys(signingKey, '')
     sign publishing.publications.mavenJava
 }
 
 dependencies {
-    compile project(':inject-resources-core')
+    implementation project(':inject-resources-core')
 
     compileOnly project(':inject-resources-commons')
-    compileOnly group: 'org.springframework', name: 'spring-context'
+    compileOnly group: 'org.springframework', name: 'spring-context', version: '6.0.8'
     compileOnly group: 'org.yaml', name: 'snakeyaml', version: SNAKE_YAML_VERSION
 
+    implementation group: 'org.jetbrains', name: 'annotations', version: '19.0.0'
     implementation group: 'org.reflections', name: 'reflections', version: '0.10.2'
 
-    implementation enforcedPlatform('org.springframework.boot:spring-boot-dependencies:2.3.2.RELEASE')
-    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter', version: JUNIT_VERSION
-    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: JUNIT_VERSION
-    testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test'
-    testCompile group: 'org.assertj', name: 'assertj-core', version: '3.14.0'
-    testCompile group: 'io.leangen.geantyref', name: 'geantyref', version: '1.3.11'
+    implementation enforcedPlatform('org.springframework.boot:spring-boot-dependencies:3.0.6')
+    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter', version: JUNIT_VERSION
+    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: JUNIT_VERSION
+    testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '3.0.6'
+    testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.14.0'
+    testImplementation group: 'io.leangen.geantyref', name: 'geantyref', version: '1.3.11'
 
     testImplementation project(':test-commons')
     testImplementation project(':inject-resources-core')
