--- a/inject-resources-spring/tests-with-gson/build.gradle
+++ b/inject-resources-spring/tests-with-gson/build.gradle
@@ -5,19 +5,20 @@ jacocoTestReport {
     classDirectories.from files(sourceSets.main.output)
 
     reports {
-        xml.enabled = true
-        html.enabled = true
+        xml.required = true
+        html.required = true
     }
 }
 
 dependencies {
-    testCompile project(':inject-resources-spring')
-    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter', version: JUNIT_VERSION
-    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: JUNIT_VERSION
-    testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test'
-    testCompile group: 'com.google.guava', name: 'guava', version: '29.0-jre'
+    testImplementation project(':inject-resources-spring')
+    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter', version: JUNIT_VERSION
+    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: JUNIT_VERSION
+    testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '3.0.6'
 
-    implementation enforcedPlatform('org.springframework.boot:spring-boot-dependencies:2.3.2.RELEASE')
+    testImplementation group: 'com.google.guava', name: 'guava', version: '30.0-jre'
+
+    implementation enforcedPlatform('org.springframework.boot:spring-boot-dependencies:3.0.6')
 
     testImplementation project(':inject-resources-core')
     testImplementation project(':inject-resources-commons')
